src/styles/custom.css
/*
* === Global overriding styles ===
*/

html {
    height: 100%;
    overflow-x: hidden;
}

body {
    height: 100%;
    background-color: #6B46C0;
    user-select: none;
}

svg {
    display: unset;
}

li {
    display: inline;
}

 /*
* === Mobile Menu ===
*/

.mobile-menu > li {
    display: list-item;
}

/*
* === Letter styling ===
*/

.letter-div-small > svg {
    height: 100px;
    width: 100px;
}

.letter-div-large > svg {
    height: 200px;
    width: 200px;
}

@media (hover) {
    .letter-div:hover > div > svg {
        animation: shake-letter 0.6s ease-out;
        transform-origin: center;
    }
}

@media (hover) {
    .letter-div:hover > div > svg > .letter-fill {
        fill: #9F7AEA;    
    }
}

.letter-rotated > svg {
    transform: rotateY(35deg);
}

.letter-fill {
    fill: #D6BCFA;
}

.letter-border {
    fill: none;
    stroke: black;
    stroke-linejoin: round;
}

@keyframes shake-letter {
    0% { transform: rotate(0deg);}
    10% { transform: rotate(5deg);}
    20% { transform: rotate(0deg);}
    30% { transform: rotate(-5deg);}
    40% { transform: rotate(0deg);}
    50% { transform: rotate(5deg);}
    60% { transform: rotate(0deg);}
    70% { transform: rotate(-5deg);}
    80% { transform: rotate(0deg);}
}

.letter-selected > div > svg > .letter-fill {
    fill: #6B46C1;
}

@media (hover) {
    .letter-selected:hover > div > svg > .letter-fill {
        fill: #9F7AEA;
    }
}

/* 
* === Mobile Game === 
*/

.mobile-image-tap {
    display: none;
    height: 10px;
    position: relative;
    top: 5px;
    opacity: 0;
    animation: fade 5s 3s;    
    animation-fill-mode: forwards;
}

@media only screen and (max-width: 767px) {
    .mobile-image-tap {
       display: block;
    }
}

@keyframes fade {
    0% { opacity: 0 ; }
    50% { opacity: 1; }
    100% { opacity: 0; }
}

